# bookie-breaker-prediction-engine

./: .env.example  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
src/prediction_engine/: __init__.py
